--- a/js/orli.html
+++ b/js/orli.html
@@ -40,6 +40,15 @@
       width: 95%;
     }
 
+    input[type="number"]~input[type="button"] {
+      transition: transform 0.8s ease-in-out;
+    }
+
+    input[type="number"]:hover~input[type="button"] {
+      transform: rotate(720deg);
+    }
+
+
     button {
       font-size: 2em;
       width: 100%;
@@ -57,7 +66,6 @@
     input[type="button"]:hover {
       transform: rotate(720deg);
     }
-
 
     input:hover,
     button:hover,
