--- a/js/orli.html
+++ b/js/orli.html
@@ -67,6 +67,10 @@
       transform: rotate(720deg);
     }
 
+    input[type="range"] {
+      width: 100%;
+    }
+
     input:hover,
     button:hover,
     label:hover,
